--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- ------------------------------------------------------
 				Note that the image of the logo is linked to the home page.
 				------------------------------------------------------- -->
-				<a href="index.html"><img src="https://zyyiphjmxwwaplwrbdir.supabase.co/storage/v1/object/public/imgs2/Jeevana-Reddy_Operations-Head-_1_.jpeg?" alt="logo image" id="logo"></a>
+				<a href="index.html"><img src="https://zyyiphjmxwwaplwrbdir.supabase.co/storage/v1/object/public/imgs2/pic" alt="logo image" id="logo"></a>
 			</div>
             
             
